examples/errors/parsing/incr-no-do.rcn
rfun incr (p : Ptr Int, [res] r : (x : Int = Own[Int](p)))
  -> ([res] (do x' : Int = Own[Int](p))) [impure] = (res r)
main : () [impure] = ()
